Fixed search z-index issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,9 +111,8 @@ header{
 }
 
 #main-head-text{
-    
     font-size: 2em;
-    margin: 50px 0px;
+    margin: 50px 30px;
     color: light-dark(var(--light-text), var(--dark-text));
 }
 
@@ -374,6 +373,15 @@ footer a:hover {
     position: sticky;
     top: 0; 
     }
+
+    .top-bar{
+        --primary: #d06330b4;
+        --dark-primary: #9f502bb4;
+        backdrop-filter: blur(10px);
+        background: light-dark(var(--primary), var(--dark-primary));
+        -webkit-backdrop-filter: blur(100px);
+        color: light-dark(var(--light-text), var(--dark-text));
+    }
     
     #welcome{
         grid-template-columns: auto;
@@ -404,6 +412,7 @@ footer a:hover {
         border: #1a1a2e;
         box-shadow: 0px 0px 5px rgb(15, 15, 15);
         border-radius: 5px;
+        z-index: 100000;
     }
 
     .nav-links li {
@@ -421,6 +430,7 @@ footer a:hover {
         overflow: auto;
         padding: 40px;
         width: 80%;
+        z-index: -2;
     }
     
     .project-image {
@@ -438,7 +448,6 @@ footer a:hover {
         justify-content: center;
     }
 
-
     #project-container{
         align-items: center;
     }
@@ -446,6 +455,7 @@ footer a:hover {
     #search-bar {
         text-align: center;
         top: 120px;
+        z-index: -1;
     }
 
     .skill-and-expertise {
@@ -458,12 +468,10 @@ footer a:hover {
     }
     
     footer {
-    position: relative; 
-    display: flex;
-    flex-direction: column;
-
-}
-  
+        position: relative; 
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 
